# todo_list_example

./: .gitignore  CLAUDE.md  README.md
.claude/skills/close_feature/: SKILL.md
.claude/skills/create_feature/: SKILL.md
.claude/skills/develop_feature/: SKILL.md
.claude/skills/plan_feature/: SKILL.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: tareas.py
backend/app/auth/: clerk.py
backend/app/models/: tarea.py
backend/app/schemas/: tarea.py
db/: schema.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  table.tsx
frontend/src/features/tareas/: DeleteConfirmDialog.tsx  KanbanCard.tsx  KanbanColumn.tsx  TareaColumnPicker.tsx  TareaFilters.tsx  TareaModal.tsx  TareaTable.tsx  api.ts  constants.ts  types.ts
frontend/src/hooks/: useColumnPreferences.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/routes/: DetailPage.tsx  KanbanPage.tsx  SearchPage.tsx  SignInPage.tsx
specs/architecture/: architecture.md
specs/features/implemented/feature_001/: plan.md  requirements.md  specs.md
specs/features/implemented/feature_002/: plan.md  requirements.md  specs.md
specs/features/implemented/feature_003/: plan.md  requirements.md  specs.md
