[project]
name = "todo-list-backend"
version = "0.1.0"
description = "Backend for the Tareas (to-do list) app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "pyjwt[crypto]",
    "cryptography",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
